package domain

final case class Pawn(side: Side, pawnType: PawnType, position: PawnPosition)
